--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -11,13 +11,14 @@
       p {
         color: white;
         background-color: green;
+        font-size: 18px;
       }
     </style>
   </head>
   <body>
     <div>Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
-    <button style="color: black; background-color: orange">
+    <button style="font-size: 16px; background-color: orange">
       Inline Method
     </button>
   </body>
